doc: swago get my event
